--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -42,3 +42,9 @@
  a{
     color: black;
 }
+.tab-content {
+    border-left: 2px solid #ddd;
+    border-right: 2px solid #ddd;
+    border-bottom: 2px solid #ddd;
+    padding: 10px;
+}
